--- a/APPGMV回溯.ipynb
+++ b/APPGMV回溯.ipynb
@@ -758,7 +758,7 @@
     "    -- AND dt <= date_format(date_add(current_date,-39),'yyyyMMdd')\n",
     "    and dt>='%s' and dt<='%s'\n",
     "    and adver_id not in ('105855','105856','105857','105917','105925','105957','106005','106023','106142','106000','106004','106143','106159','106213','106199','106198')\n",
-    "    and (line_name in ('口才','素材','next-科学','情商') or specific_name in ('公益活动'))\n",
+    "    and (line_name in ('口才','素材','next-科学','情商','增长','外部大V') or specific_name in ('公益活动'))\n",
     "    and page_name='首页'\n",
     "    and adslot_id in ('99','98','97','96','95','94','93','92','91','90','81','80','79','78','77','76','68','46','64','57','58','56','62','59','60')\n",
     "group by\n",
@@ -1623,7 +1623,7 @@
     "        -- AND dt <= date_format(date_add(current_date,-39),'yyyyMMdd')\n",
     "        and dt>='%s' and dt<='%s'\n",
     "        and adver_id not in ('105855','105856','105857','105917','105925','105957','106005','106023','106142','106000','106004','106143','106159','106213','106199','106198')\n",
-    "        and (line_name in ('口才','素材','next-科学','情商') or specific_name in ('公益活动'))\n",
+    "        and (line_name in ('口才','素材','next-科学','情商','增长','外部大V') or specific_name in ('公益活动'))\n",
     "        and page_name='首页'\n",
     "        and adslot_id in ('99','98','97','96','95','94','93','92','91','90','81','80','79','78','77','76','68','46','64','57','58','56','62','59','60')\n",
     "    group by\n",
