--- a/APPGMV回溯.ipynb
+++ b/APPGMV回溯.ipynb
@@ -1556,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -1581,25 +1581,25 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>业务分类</th>\n",
-       "      <th>购买人次</th>\n",
+       "      <th>购课人次</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>全真</td>\n",
-       "      <td>178</td>\n",
+       "      <td>244</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  业务分类  购买人次\n",
-       "0   全真   178"
+       "  业务分类  购课人次\n",
+       "0   全真   244"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1608,111 +1608,147 @@
     "# 全真leads\n",
     "sql = \"\"\"\n",
     "select\n",
-    "     '全真' as `业务分类`\n",
-    "    ,count(distinct b.order_sn) as `购买人次`\n",
+    "    '全真' as `业务分类`\n",
+    "    ,count(distinct b.`短期班订单ID`) as `购课人次`\n",
     "from\n",
-    "(\n",
-    "   select \n",
-    "        '全真' as `业务分类`\n",
-    "        ,fk_source\n",
-    "    from wx_adsdb.ads_mkt_bdp_app_mkt_adserving_summary_bdp_new_di_id a\n",
-    "    where \n",
-    "        flag IN ('6')\n",
-    "        AND (client_type_new IN ('app','') or client_type_new is null)\n",
-    "        -- AND dt >= date_format(date_add(current_date,-45),'yyyyMMdd')\n",
-    "        -- AND dt <= date_format(date_add(current_date,-39),'yyyyMMdd')\n",
-    "        and dt>='%s' and dt<='%s'\n",
-    "        and adver_id not in ('105855','105856','105857','105917','105925','105957','106005','106023','106142','106000','106004','106143','106159','106213','106199','106198')\n",
-    "        and (line_name in ('口才','素材','next-科学','情商','增长','外部大V') or specific_name in ('公益活动'))\n",
-    "        and page_name='首页'\n",
-    "        and adslot_id in ('99','98','97','96','95','94','93','92','91','90','81','80','79','78','77','76','68','46','64','57','58','56','62','59','60')\n",
-    "    group by\n",
-    "        '全真',\n",
-    "        fk_source\n",
-    ") a\n",
-    "\n",
-    "inner join\n",
-    "(\n",
-    "    select\n",
-    "        '全真' as `业务分类`\n",
-    "        ,d.source_id\n",
-    "        -- ,sum(d.real_price/100)/count(c.order_sn) as `客单价`\n",
-    "        ,c.order_sn\n",
-    "    from\n",
     "    (\n",
-    "        select\n",
-    "            cast(course_id as string) as course_id,\n",
-    "            cast(goods_id as string) as goods_id\n",
-    "        from\n",
-    "            wx_odsdb.ods_ms_next_app_nscm_goods_course_plans_fd \n",
-    "        where\n",
-    "            dt = date_format(date_add(current_date,-1),'yyyy-MM-dd')\n",
-    "        group by \n",
-    "            cast(course_id as string),\n",
-    "            cast(goods_id as string)\n",
+    "        select        \n",
+    "            fk_source      \n",
+    "        from wx_adsdb.ads_mkt_bdp_app_mkt_adserving_summary_bdp_new_di_id     \n",
+    "        where    \n",
+    "            flag IN ('6')\n",
+    "            AND (client_type_new IN ('app','') or client_type_new is null)\n",
+    "            -- AND dt >= date_format(date_add(current_date,-45),'yyyyMMdd')\n",
+    "            -- AND dt <= date_format(date_add(current_date,-39),'yyyyMMdd')\n",
+    "            and dt>='%s' and dt<='%s'\n",
+    "            and adver_id not in ('105855','105856','105857','105917','105925','105957','106005','106023','106142','106000','106004','106143','106159','106213','106199','106198')      \n",
+    "            and (line_name in ('口才','素材','next-科学','情商','增长','外部大V') or specific_name in ('公益活动'))    \n",
+    "            and page_name='首页'   \n",
+    "            and adslot_id in ('99','98','97','96','95','94','93','92','91','90','81','80','79','78','77','76','68','46','64','57','58','56','62','59','60')     \n",
+    "        group by\n",
+    "            fk_source\n",
     "    ) as a\n",
-    "    left join \n",
+    "inner join\n",
     "    (\n",
     "        select\n",
-    "            dt,\n",
-    "            cast(id as string) as course_id,   -- 课程ID\n",
-    "            name as course_name,  -- 课程名称\n",
-    "            cast(course_studio_id as string) as work_type,   -- 工作室ID\n",
-    "            cast(course_mold as string) as course_type  -- 长短期班\n",
+    "            a.source_id,\n",
+    "            b.hotspot_name,\n",
+    "            -- a.`购课人次`\n",
+    "            a.`短期班订单ID`\n",
     "        from\n",
-    "            wx_odsdb.ods_ms_next_app_nscm_courses_fd \n",
-    "        where\n",
-    "            dt = date_format(date_add(current_date,-1),'yyyy-MM-dd')\n",
-    "            and cast(course_mold as string) in ('2')  -- 1 长期班   2 短期班\n",
-    "            and cast(course_studio_id as string) in ('115', '116', '117')\n",
-    "            -- and cast(course_mold as varchar) in ('2')\n",
-    "            -- and env = 2   -- 1 测试  2 正式\n",
-    "    ) as b on a.course_id = b.course_id\n",
-    "    left join \n",
-    "    (\n",
-    "        select\n",
-    "            dt,\n",
-    "            cast(course_id as string) as course_id,    -- 课程ID\n",
-    "            cast(goods_id as string) as goods_id,\n",
-    "            course_name,    -- 课程名称\n",
-    "            cast(course_studio_id as string) as work_type,  -- 工作室ID\n",
-    "            cast(stu_id as string) as stu_id,    -- 学生ID\n",
-    "            order_sn,    -- 订单ID\n",
-    "            cast(status as string) as status     -- 10 正常  20 已退费\n",
-    "        from\n",
-    "            wx_odsdb.ods_ms_next_app_nscm_stu_courses_fd\n",
-    "        where\n",
-    "            dt = date_format(date_add(current_date,-1),'yyyy-MM-dd')\n",
-    "            and status = 10  --- 未退费\n",
-    "            and cast(course_studio_id as string) in ('115', '116', '117')\n",
-    "    ) as c on a.course_id = c.course_id and a.goods_id = c.goods_id and c.course_name = b.course_name and b.work_type = c.work_type and b.dt = c.dt\n",
-    "    inner join \n",
-    "    (\n",
-    "        select\n",
-    "            dt,\n",
-    "            order_sn,\n",
-    "            price,\n",
-    "            real_price,\n",
-    "            cast(stu_id as string) as stu_id,\n",
-    "            source_id\n",
-    "        from\n",
-    "            wx_odsdb.ods_ms_next_app_nscm_orders_fd \n",
-    "        where\n",
-    "            dt = date_format(date_add(current_date,-1),'yyyy-MM-dd')\n",
-    "            and pay_status = 20   -- 20 支付成功\n",
-    "            and substr(date_format(from_utc_timestamp(from_unixtime(paid_time),'GMT+8'),'yyyy-MM-dd'),1,10)>='%s'\n",
-    "            and substr(date_format(from_utc_timestamp(from_unixtime(paid_time),'GMT+8'),'yyyy-MM-dd'),1,10)<='%s'\n",
-    "            -- 添加购课时间 !!\n",
-    "            -- 添加购课金额 !!\n",
-    "    ) as d on c.order_sn = d.order_sn and c.stu_id = d.stu_id and c.dt = d.dt\n",
-    "    group by\n",
-    "        '全真'\n",
-    "        ,d.source_id\n",
-    "        ,c.order_sn\n",
-    ") b on a.fk_source=b.source_id\n",
-    "group by\n",
-    "    '全真'\n",
+    "            (\n",
+    "            select \n",
+    "                a.source_id,\n",
+    "                -- count(distinct a.`短期班订单ID`) as `购课人次`\n",
+    "                a.`短期班订单ID`\n",
+    "            from\n",
+    "                (\n",
+    "                select\n",
+    "                    b.dt as `统计截止日期`,\n",
+    "                    a.course_id as `课程ID`,\n",
+    "                    b.course_name as `课程名称`,\n",
+    "                    a.goods_id as `商品ID`,\n",
+    "                    b.work_type as `工作室ID`,\n",
+    "                    b.course_type as `类型`,\n",
+    "                    c.stu_id as `学生ID`,\n",
+    "                    c.stu_course_id as stu_course_id,\n",
+    "                    d.order_sn as `短期班订单ID`,\n",
+    "                    d.price as `课程售价`,\n",
+    "                    d.real_price as `实付价格`,\n",
+    "                    d.source_id\n",
+    "                from\n",
+    "                    (\n",
+    "                    select\n",
+    "                        cast(course_id as string) as course_id,\n",
+    "                        cast(goods_id as string) as goods_id\n",
+    "                    from\n",
+    "                        wx_odsdb.ods_ms_next_app_nscm_goods_course_plans_fd \n",
+    "                    where\n",
+    "                        dt = date_format(date_add(current_date,-1),'yyyy-MM-dd')\n",
+    "                        and cast(goods_id as string) not in ('383054','380956','380752','382304','381672','379632','381585','381673','379496','380957','380958','379380','384285','383055','383071','381673','379621','380632','380642','379622','379620','379604','379578','379405','379404', '379352', '379371', '379381', '379446', '379486', '379558', '381695', '381821', '381687', '379605', '379479', '379480', '7000000', '7000003', '7000004', '7000006', '7000007', '7000016', '7000017', '7000021', '379588', '7000031', '7000033'\n",
+    "                                                                , '7000008', '7000000', '7000003', '7000032', '7000030')\n",
+    "                    group by \n",
+    "                        cast(course_id as string),\n",
+    "                        cast(goods_id as string)\n",
+    "                    ) as a\n",
+    "                left join \n",
+    "                    (\n",
+    "                    select\n",
+    "                        dt,\n",
+    "                        cast(id as string) as course_id,   -- 课程ID\n",
+    "                        name as course_name,  -- 课程名称\n",
+    "                        cast(course_studio_id as string) as work_type,   -- 工作室ID\n",
+    "                        cast(course_mold as string) as course_type  -- 长短期班\n",
+    "                    from\n",
+    "                        wx_odsdb.ods_ms_next_app_nscm_courses_fd \n",
+    "                    where\n",
+    "                        dt = date_format(date_add(current_date,-1),'yyyy-MM-dd')\n",
+    "                        and cast(course_mold as string) in ('2')  -- 1 长期班   2 短期班\n",
+    "                \n",
+    "                    ) as b on a.course_id = b.course_id\n",
+    "                left join \n",
+    "                    (\n",
+    "                    select\n",
+    "                        dt,\n",
+    "                        cast(id as string) as stu_course_id,\n",
+    "                        cast(course_id as string) as course_id,    -- 课程ID\n",
+    "                        cast(goods_id as string) as goods_id,\n",
+    "                        course_name,    -- 课程名称\n",
+    "                        cast(course_studio_id as string) as work_type,  -- 工作室ID\n",
+    "                        cast(stu_id as string) as stu_id,    -- 学生ID\n",
+    "                        order_sn,    -- 订单ID\n",
+    "                        cast(status as string) as status     -- 10 正常  20 已退费\n",
+    "                    from\n",
+    "                        wx_odsdb.ods_ms_next_app_nscm_stu_courses_fd\n",
+    "                    where\n",
+    "                        dt = date_format(date_add(current_date,-1),'yyyy-MM-dd')\n",
+    "                        and cast(goods_id as string) not in ('383054','380956','380752','382304','381672','379632','381585','381673','379496','380957','380958','379380','384285','383055','383071','381673','379621','380632','380642','379622','379620','379604','379578','379405','379404', '379352', '379371', '379381', '379446', '379486', '379558', '381695', '381821', '381687', '379605', '379479', '379480', '7000000', '7000003', '7000004', '7000006', '7000007', '7000016', '7000017', '7000021', '379588', '7000031', '7000033'\n",
+    "                                                                , '7000008', '7000000', '7000003', '7000032', '7000030')\n",
+    "                        and status = 10  --- 未退费\n",
+    "                    ) as c on a.course_id = c.course_id and a.goods_id = c.goods_id and c.course_name = b.course_name and b.work_type = c.work_type and b.dt = c.dt\n",
+    "                left join \n",
+    "                    (\n",
+    "                    select\n",
+    "                        dt,\n",
+    "                        order_sn,\n",
+    "                        price,\n",
+    "                        real_price,\n",
+    "                        cast(stu_id as string) as stu_id,\n",
+    "                        source_id\n",
+    "                    from\n",
+    "                        wx_odsdb.ods_ms_next_app_nscm_orders_fd \n",
+    "                    where\n",
+    "                        dt = date_format(date_add(current_date,-1),'yyyy-MM-dd')\n",
+    "                        and pay_status = 20   -- 20 支付成功\n",
+    "                        and price >= 0\n",
+    "                        and substr(date_format(from_utc_timestamp(from_unixtime(paid_time),'GMT+8'),'yyyy-MM-dd'),1,10)>='%s'\n",
+    "                        and substr(date_format(from_utc_timestamp(from_unixtime(paid_time),'GMT+8'),'yyyy-MM-dd'),1,10)<='%s'\n",
     "\n",
+    "                        -- 添加购课时间 !!\n",
+    "                        -- 添加购课金额 !!\n",
+    "                    ) as d on c.order_sn = d.order_sn and c.stu_id = d.stu_id and c.dt = d.dt\n",
+    "                ) as a\n",
+    "            where   \n",
+    "                a.`学生ID` is not null\n",
+    "                and a.source_id != ''\n",
+    "            -- group by\n",
+    "            --     a.source_id\n",
+    "            ) as a\n",
+    "        left join \n",
+    "            (\n",
+    "            SELECT\n",
+    "                hotspot_id,\n",
+    "                hotspot_name\n",
+    "            FROM \n",
+    "                wx_dimdb.dim_hotspot_chain\n",
+    "            where\n",
+    "                dp = 'EXPIRE'\n",
+    "            GROUP BY\n",
+    "                hotspot_id,\n",
+    "                hotspot_name\n",
+    "            ) as b on a.source_id = b.hotspot_id\n",
+    "    ) as b on a.fk_source = b.source_id\n",
+    "group by '全真'\n",
     "\n",
     "\"\"\" % (start_yes,end_yes,start_yes_fmt,end_yes_fmt)\n",
     "\n",
@@ -2295,7 +2331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -2327,27 +2363,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>演讲与口才</td>\n",
-       "      <td>1224.307414</td>\n",
+       "      <td>1243.837251</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>编程</td>\n",
-       "      <td>1527.994852</td>\n",
+       "      <td>2375.871300</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>科学创想</td>\n",
-       "      <td>1507.635071</td>\n",
+       "      <td>1513.322275</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>国际象棋</td>\n",
-       "      <td>1386.776708</td>\n",
+       "      <td>1393.081436</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>人文美育</td>\n",
-       "      <td>1544.879575</td>\n",
+       "      <td>1550.589678</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -2355,14 +2391,14 @@
       ],
       "text/plain": [
        "    业务分类          客单价\n",
-       "0  演讲与口才  1224.307414\n",
-       "1     编程  1527.994852\n",
-       "2   科学创想  1507.635071\n",
-       "3   国际象棋  1386.776708\n",
-       "4   人文美育  1544.879575"
+       "0  演讲与口才  1243.837251\n",
+       "1     编程  2375.871300\n",
+       "2   科学创想  1513.322275\n",
+       "3   国际象棋  1393.081436\n",
+       "4   人文美育  1550.589678"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2372,7 +2408,7 @@
     "sql = \"\"\"\n",
     "select\n",
     "    b.subject_names as `业务分类`\n",
-    "    ,coalesce(sum(a.pay_amt),0)/count(distinct a.stu_course_id) as `客单价`\n",
+    "    ,(coalesce(sum(a.pay_amt),0)+coalesce(sum(c.real_pay_amt),0))/count(distinct a.stu_course_id) as `客单价`\n",
     "from\n",
     "(\n",
     "   SELECT \n",
@@ -2386,6 +2422,17 @@
     "        and substr(order_pay_end_time,1,10) <= '%s'\n",
     "        AND is_valid = 1 --转化有效\n",
     ") a\n",
+    "left join\n",
+    "(\n",
+    "    SELECT \n",
+    "        *\n",
+    "    FROM wx_dwddb.dwd_trd_pro_order_fd\n",
+    "    WHERE \n",
+    "        dt = date_format(date_add(current_date,-1),'yyyy-MM-dd')\n",
+    "        AND is_return='0'\n",
+    "        and substr(pay_end_time,1,10)>='%s'\n",
+    "        and substr(pay_end_time,1,10)<='%s'\n",
+    ") c on c.order_id=a.order_id\n",
     "inner join\n",
     "(\n",
     "    SELECT \n",
@@ -2400,7 +2447,7 @@
     "group by\n",
     "    b.subject_names\n",
     "\n",
-    "\"\"\" % (end_yes_29_fmt,end_yes_fmt)\n",
+    "\"\"\" % (end_yes_29_fmt,end_yes_fmt,end_yes_29_fmt,end_yes_fmt)\n",
     "\n",
     "result = spark.sql(sql)\n",
     "\n",
@@ -3045,7 +3092,7 @@
     "    (\n",
     "        select \n",
     "            distinct stu_course_id \n",
-    "        from wx_analysis.chuangxin_zhengjiake_laiyuanbiao a\n",
+    "        from wx_tmpdb.chuangxin_zhengjiake_laiyuanbiao_v2 a\n",
     "        where \n",
     "            substr(course_create_time,1,10) >= '%s'\n",
     "            and substr(course_create_time,1,10) <= '%s'\n",
